--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.6.1",
     "datatables.net": "^1.11.3",
@@ -25,9 +26,11 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-spinner": "^13.1.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.0",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
